apps/base/php-apache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: php-apache
spec:
  type: ClusterIP
  selector:
    app: php-apache
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
